# Cursor-Analysis

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  quick-switch.sh  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
scripts/: README-image-processor.md  build-all.sh  build-windows.sh  bump-version.js  image-processor.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src/components/common/: ConfirmDialog.tsx  Pagination.tsx  StatCard.tsx  index.ts
src/components/dialogs/: ChatDetailModal.tsx  index.ts
src/components/lists/: ProjectRow.tsx  UnifiedChatList.tsx  WorkspaceRow.tsx  index.ts
src/components/tabs/: DatabaseTab.tsx  OverviewTab.tsx  ProjectsTab.tsx  StorageTab.tsx  TrashTab.tsx  WorkspacesTab.tsx  index.ts
src/design-system/: README.md  index.ts  tokens.ts
src/lib/: format.ts
src/stores/: appStore.ts
src/types/: index.ts
