[package]
name = "cursor-analysis"
version = "1.0.4"
description = "Cursor IDE Usage Analysis Tool for macOS"
authors = ["Cong"]
edition = "2021"

[lib]
name = "cursor_analysis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
bytesize = "1"

